sumo/tests/sumo/extended/emitter/errors/vtypedist/false_id/errors.sumo
Error: MSTriggeredSource emitter: Vehicle type 'xxx' does not exist.
Quitting (on error).
